--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,38 +37,39 @@
                 android:layout_margin="20dp"
                 android:src="@drawable/ic_loginpage" />
 
-        <LinearLayout
-            android:id="@+id/form"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:padding="15dp"
-            android:orientation="vertical">
+            <LinearLayout
+                android:id="@+id/form"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:padding="15dp"
+                android:orientation="vertical">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/login_email"
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:background="@drawable/forget"
-                android:hint="Email"
-                android:textColor="@color/colorPrimaryText"
-                android:textSize="14sp" />
+                <EditText
+                    android:id="@+id/login_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:background="@drawable/forget"
+                    android:hint="Email"
+                    android:textColor="@color/colorPrimaryText"
+                    android:textSize="14sp" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/login_password"
-                android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/forget"
-                android:inputType="textPassword"
-                android:hint="Password"
-                android:textColor="@color/colorPrimaryText"
-                android:textSize="14sp" />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/login_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/forget"
+                    android:inputType="textPassword"
+                    android:hint="Password"
+                    android:textColor="@color/colorPrimaryText"
+                    android:textSize="14sp" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
                     <TextView
                         android:id="@+id/forgot_password"
                         android:layout_width="wrap_content"
@@ -92,72 +93,72 @@
                         android:gravity="center_vertical"
                         android:textSize="14sp"
                         />
-        </LinearLayout>
+                </LinearLayout>
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/loginbtn"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_gravity="center_horizontal"
-                android:background="@drawable/button"
-                android:text="Login"
-                android:textColor="#FFF"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                <Button
+                    android:id="@+id/loginbtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@drawable/button"
+                    android:text="Login"
+                    android:textColor="#FFF"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/logintxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:text="Don't have an account? Sign Up"
-                android:textColor="@color/colorPrimaryText"
-                android:textSize="16sp" />
-
-
-            <TextView
-                android:id="@+id/loginLink"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="OR"
-                android:textColor="@color/colorDivider"
-                android:textSize="14sp" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:padding="4dp"
-                android:layout_marginTop="10dp">
-
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                <TextView
+                    android:id="@+id/logintxt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/colorPrimaryLight"
-                    android:src="@drawable/google"
-                    android:layout_margin="11dp"
-                    android:layout_weight="1"/>
+                    android:layout_marginTop="15dp"
+                    android:text="Don't have an account? Sign Up"
+                    android:textColor="@color/colorPrimaryText"
+                    android:textSize="16sp" />
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
+
+                <TextView
+                    android:id="@+id/loginLink"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/colorPrimaryLight"
-                    android:layout_margin="11dp"
-                    android:layout_weight="1"
-                    android:src="@drawable/fb" />
+                    android:layout_marginTop="20dp"
+                    android:text="OR"
+                    android:textColor="@color/colorDivider"
+                    android:textSize="14sp" />
 
-                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/colorPrimaryLight"
-                    android:src="@drawable/twitter"
-                    android:layout_margin="11dp"
-                    android:layout_weight="1"/>
+                    android:layout_gravity="center"
+                    android:padding="4dp"
+                    android:layout_marginTop="10dp">
+
+                    <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/colorPrimaryLight"
+                        android:src="@drawable/google"
+                        android:layout_margin="11dp"
+                        android:layout_weight="1"/>
+
+                    <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/colorPrimaryLight"
+                        android:layout_margin="11dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/fb" />
+
+                    <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/colorPrimaryLight"
+                        android:src="@drawable/twitter"
+                        android:layout_margin="11dp"
+                        android:layout_weight="1"/>
+
+                </LinearLayout>
 
             </LinearLayout>
-
-        </LinearLayout>
 
         </LinearLayout>
 
