--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -7,17 +7,14 @@
     android:backgroundTint="@color/colorSecondaryText"
     tools:context="ui.MessageActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/bar_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
     <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/toolbar_message"
-        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
         app:popupTheme="@style/MenuStyle"
+        app:navigationIcon="?attr/actionModeCloseDrawable"
         android:background="@color/colorPrimary">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -35,18 +32,12 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_messages"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/card"
-        android:layout_below="@id/bar_layout" />
-
-
+        android:layout_below="@id/toolbar_message" />
 
       <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
