--- a/app/src/main/res/layout/activity_group_chat2.xml
+++ b/app/src/main/res/layout/activity_group_chat2.xml
@@ -1,40 +1,124 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".ui.GroupChatActivity">
     <include android:id="@+id/group_chat_bar_layout"
         layout="@layout/app_bar_layout"> </include>
-    <ScrollView android:id="@+id/my_scroll_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/group_chat_bar_layout" android:layout_above="@+id/myLinearLayout">
-        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
+    <ScrollView
+        android:id="@+id/my_scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/group_chat_bar_layout"
+        android:layout_above="@+id/myLinearLayout">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
             <TextView android:id="@+id/group_chat_text_display"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:textAllCaps="false"
                 android:textSize="20sp"
-                android:textColor="@android:color/white"
+                android:textColor="@color/colorPrimaryText"
                 android:layout_marginStart="2dp"
                 android:layout_marginEnd="2dp"
                 android:layout_marginBottom="60dp"/>
         </LinearLayout>
+
     </ScrollView>
-    <LinearLayout
+
+<!--    <LinearLayout-->
+<!--        android:id="@+id/myLinearLayout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:gravity="center"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_alignParentStart="true">-->
+
+<!--        <EditText-->
+<!--            android:id="@+id/input_group_message"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:hint="write your message here..."/>-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/send_message_button"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:src="@drawable/ic_next"-->
+<!--            android:backgroundTint="@color/colorPrimaryText"/>-->
+<!--    </LinearLayout>-->
+
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/myLinearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true">
+        app:cardBackgroundColor="@color/colorSecondaryVariant"
+        app:cardElevation="10dp">
 
-        <EditText
-            android:id="@+id/input_group_message"
-            android:layout_width="370dp"
-            android:layout_height="wrap_content"
-            android:hint="write your message here..."
-            android:padding="17dp"/>
 
-        <ImageButton
-            android:id="@+id/send_message_button"
-            android:layout_width="50dp"
+
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_next"/>
-    </LinearLayout>
+            android:gravity="center">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    app:boxBackgroundMode="outline"
+                    app:endIconTint="@color/colorButtons"
+                    app:startIconDrawable="@drawable/ic_tag_faces"
+                    app:endIconDrawable="@drawable/ic_attach_file"
+                    app:startIconTint="@color/colorButtons">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/input_group_message"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@drawable/white_edit_text"
+                        android:hint=" Message"
+                        android:inputType="text"
+                        android:textColor="@color/colorPrimaryText" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <ImageView
+                    android:id="@+id/send_message_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/circle"
+                    android:backgroundTint="@color/colorAccent"
+                    android:src="@drawable/ic_mic"
+                    app:tint="@color/colorSecondaryText"
+                    android:padding="10dp"
+                    android:enabled="false" />
+
+                <Button
+                    android:id="@+id/record_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="5dp"
+                    android:background="@drawable/ic_mic"
+                    android:padding="10dp" />
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </com.google.android.material.card.MaterialCardView>
 
 </RelativeLayout>
