--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -50,15 +50,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:orientation="horizontal">
 
 
-            <ImageButton
+            <ImageView
+                android:id="@+id/camera_gallery_btn"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:background="@drawable/c"
-                android:layout_margin="10dp"
-                android:id="@+id/camera_gallery_btn"/>
+                android:background="@drawable/ic_outline_camera"
+                android:backgroundTint="@color/colorPrimaryText"
+                android:layout_margin="10dp" />
 
 
             <EditText
@@ -67,20 +69,26 @@
                 android:hint=" Message"
                 android:inputType="text"
                 android:layout_weight="1"
+                android:drawableLeft="@drawable/ic_tag_faces"
+                android:padding="10dp"
                 android:textColor="@android:color/black"
                 android:id="@+id/edit_message_text"
                 android:layout_marginTop="14dp"
                 android:background="@drawable/et_text" />
 
 
-            <Button
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:enabled="false"
-                android:backgroundTint="@color/colorValid"
-                android:background="@drawable/ic_next"
+            <ImageView
                 android:id="@+id/send_messsage_btn"
-                android:layout_margin="10dp"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
+                android:padding="10dp"
+                android:background="@drawable/circle"
+                android:backgroundTint="@color/colorAccent"
+                android:src="@drawable/ic_mic"
+                app:tint="@color/colorSecondaryText"
+                android:enabled="false"/>
 
 
 
