--- a/app/src/main/res/layout/activity_group_chat2.xml
+++ b/app/src/main/res/layout/activity_group_chat2.xml
@@ -58,8 +58,6 @@
         app:cardBackgroundColor="@color/colorSecondaryVariant"
         app:cardElevation="10dp">
 
-
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -108,8 +106,8 @@
 
                 <Button
                     android:id="@+id/record_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_gravity="center"
                     android:layout_margin="5dp"
                     android:background="@drawable/ic_mic"
