--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -7,17 +7,14 @@
     android:backgroundTint="@color/colorSecondaryText"
     tools:context="ui.MessageActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/bar_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
     <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/toolbar_message"
-        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
         app:popupTheme="@style/MenuStyle"
+        app:navigationIcon="?attr/actionModeCloseDrawable"
         android:background="@color/colorPrimary">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -36,39 +33,34 @@
     </androidx.appcompat.widget.Toolbar>
 
 
-    </com.google.android.material.appbar.AppBarLayout>
-
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_messages"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/card"
-        android:layout_below="@id/bar_layout" />
-
-
+        android:layout_below="@id/toolbar_message" />
 
       <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:cardCornerRadius="10dp"
         android:id="@+id/card"
         app:cardElevation="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:orientation="horizontal">
 
 
-            <ImageButton
+            <ImageView
+                android:id="@+id/camera_gallery_btn"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:background="@drawable/c"
-                android:layout_margin="10dp"
-                android:id="@+id/camera_gallery_btn"/>
-
+                android:background="@drawable/ic_outline_camera"
+                android:backgroundTint="@color/colorPrimaryText"
+                android:layout_margin="10dp" />
 
             <EditText
                 android:layout_width="0dp"
@@ -76,20 +68,26 @@
                 android:hint=" Message"
                 android:inputType="text"
                 android:layout_weight="1"
+                android:drawableLeft="@drawable/ic_tag_faces"
+                android:padding="10dp"
                 android:textColor="@android:color/black"
                 android:id="@+id/edit_message_text"
                 android:layout_marginTop="14dp"
                 android:background="@drawable/et_text" />
 
 
-            <Button
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:enabled="false"
-                android:backgroundTint="@color/colorValid"
-                android:background="@drawable/ic_launcher_foreground"
+            <ImageView
                 android:id="@+id/send_messsage_btn"
-                android:layout_margin="10dp"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"
+                android:padding="10dp"
+                android:background="@drawable/circle"
+                android:backgroundTint="@color/colorAccent"
+                android:src="@drawable/ic_mic"
+                app:tint="@color/colorSecondaryText"
+                android:enabled="false"/>
 
 
 
