--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -136,7 +136,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:backgroundTint="@color/colorPrimaryLight"
-                        android:src="@drawable/google"
                         android:layout_margin="11dp"
                         android:layout_weight="1"/>
 
@@ -145,8 +144,7 @@
                         android:layout_height="wrap_content"
                         android:backgroundTint="@color/colorPrimaryLight"
                         android:layout_margin="11dp"
-                        android:layout_weight="1"
-                        android:src="@drawable/fb" />
+                        android:layout_weight="1" />
 
                     <com.google.android.material.floatingactionbutton.FloatingActionButton
                         android:layout_width="wrap_content"
