--- a/app/src/main/res/layout/activity_pager.xml
+++ b/app/src/main/res/layout/activity_pager.xml
@@ -52,7 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="sendOnChannel1"
-            android:text="Alert"
+            android:text="Urgent Alert"
             android:textColor="@color/colorSecondaryText"/>
 
         <com.google.android.material.button.MaterialButton
@@ -60,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="sendOnChannel2"
-            android:text="Alert2"
+            android:text="Not Urgent"
             android:textColor="@color/colorSecondaryText"/>
 
     </LinearLayout>
