add a notification receiver class

--- a/app/src/main/res/layout/activity_pager.xml
+++ b/app/src/main/res/layout/activity_pager.xml
@@ -60,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="sendOnChannel2"
-            android:text="Not Urgent"
+            android:text="Non-Urgent ALert"
             android:textColor="@color/colorSecondaryText"/>
 
     </LinearLayout>
