--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -10,7 +10,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:id="@+id/chat_image"
-        android:src="@drawable/user"/>
+        android:src="@drawable/ic_account"/>
 
     <TextView
         android:layout_width="wrap_content"
