--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -17,7 +17,7 @@
         android:layout_height="40dp"
         android:id="@+id/chat_image"
         android:visibility="gone"
-        android:src="@drawable/user"/>
+        android:src="@drawable/ic_account"/>
 
     <TextView
         android:layout_width="wrap_content"
