--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -25,7 +25,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/user"
+            android:src="@drawable/ic_account"
             app:civ_border_color="@color/colorPrimaryDark"
             app:civ_border_width="1dp"
             android:layout_marginTop="10dp"
