--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -58,6 +58,7 @@
                         android:elevation="12dp">
 
                         <ImageView
+                            android:id="@+id/profileImage"
                             android:layout_width="80dp"
                             android:layout_height="80dp"
                             android:src="@drawable/ic_account"
