--- a/app/src/main/res/layout/my_network.xml
+++ b/app/src/main/res/layout/my_network.xml
@@ -16,11 +16,13 @@
         android:gravity="center"
         android:layout_marginLeft="20dp">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/userImage"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:background="@drawable/ic_account" />
+            android:background="@drawable/ic_account"
+            app:civ_border_color="@color/colorSecondaryText"
+            app:civ_border_width="1dp"/>
 
         <TextView
             android:id="@+id/userName"
