--- a/app/src/main/res/layout/groups.xml
+++ b/app/src/main/res/layout/groups.xml
@@ -24,7 +24,7 @@
             android:background="@drawable/stethoscope"/>
 
         <TextView
-            android:id="@+id/groupName"
+            android:id="@+id/groupNameD"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Oncology"
