--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -103,30 +103,13 @@
                         app:fontFamily="@font/poppins_medium"
                         android:textColor="@color/colorPrimaryText"/>
 
-                    <HorizontalScrollView
-                        android:id="@+id/departmentsList"
+                    <ListView android:id="@+id/list_view_dashboard"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="match_parent"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"/>
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="150dp"
-                            android:orientation="horizontal"
-                            android:layout_marginTop="10dp"
-                            android:background="#00000000"
-                            android:layout_marginLeft="2dp"
-                            android:layout_marginBottom="10dp">
 
-                           <androidx.recyclerview.widget.RecyclerView
-                               android:id="@+id/groupsRecyclerView"
-                               android:layout_width="match_parent"
-                               android:layout_height="match_parent">
-
-                           </androidx.recyclerview.widget.RecyclerView>
-
-                        </LinearLayout>
-
-                    </HorizontalScrollView>
 
                     <TextView
                         android:id="@+id/networkText"
