--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:title ="Create Group"
+        android:icon="@color/colorPrimaryText"
         android:id="@+id/main_create_group_option"
         app:showAsAction ="collapseActionView"
         >
